--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!-- seccion que va ser desarrollada por nataly -->
-  <header>
+  <header class="header-style">
     <div class="container-fluid container-super-fluid">
       <div class="row">
         <div class="col-xs-12 col-lg-12">
@@ -42,7 +42,22 @@
         </div>
       </div>
     </div>
-  </header>
+  </header> 
+  <section class="image-car image-main">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+          <div class="orange">
+            <p>Disfruta de tu Viaje</p>
+            <p>Eres dueño de tu tiempo</p>
+            <span>Viaja con</span>
+            <img src="assets/images/logoBlanco.png" alt="logoblanco">
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
   <!-- seccion que va ser desarrollada por Aracely -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>   
