--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LAB-CAR</title>
+    <!-- Link Tipografía -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <!-- Fin Link Tipografía -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -19,9 +22,9 @@
         <div class="container">
                 <div class="row">
                         <div class="col-xs-12 col-md-3 col-md-offset-9 col-opacity">
-                            <h2>Conduce Cuando quieras</h2>
+                            <h2 class="font-bold">Conduce Cuando quieras</h2>
                             <p>LabCar es una opción flexible para alcanzar tus metas financieras</p>
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap" id="covierteconduct">Conviertete en Coductor</button>
+                            <button type="button" class="btn btn-primary font-bold" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap" id="covierteconduct">Conviertete en Coductor</button>
                             
                             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                               <div class="modal-dialog" role="document">
