implementando breakpoint movil

--- a/index.html
+++ b/index.html
@@ -92,19 +92,22 @@
           </div>
         </div>
       </div> 
-      <div class="row">
+      <div class="row visible-xs">
         <div class="col-xs-11 app-style-xs">
             <div class="col-xs-12">
-              <h3>La nueva app</h3>
+              <h3 class="text-center">La nueva app</h3>
               <img class="img-responsive"src="assets/images/iPhone6Plus.png" alt="iphone" >
             </div>
         </div>
         <div class="col-xs-12">
-          <p class="">Llega a tu destino aún más rápido</p>
+          <p class="text-left">Llega a tu destino aún más rápido</p>
         </div>  
     </div>
   </section>
   <!-- /.Seccion App-->
+  <!-- Modales -->
+
+  <!-- /.Modales-->
   <!-- seccion que va ser desarrollada por Aracely -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>   
