--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
                             
                             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                               <div class="modal-dialog" role="document">
-                                <div class="modal-content">
+                                <div class="modal-content modalConvDrive">
                                   <div class="modal-body">
                                     <form>
                                       <div class="form-group">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                         </button>
-                                        <p class="dark-font">¿Tiene vehiculos de 4 puertas?</p>
+                                        <p class="font-bold">¿Tiene vehiculos de 4 puertas?</p>
                                         <select class="form-control">
                                             <option>Si</option>
                                             <option>No</option>
                                         </select>
                                       </div>
                                       <div class="form-group">
-                                        <p class="dark-font">Marca</p>
+                                        <p class="font-bold">Marca</p>
                                         <select class="form-control">
                                             <option>Elige la Marca del vehículo</option>
                                             <option>Nissan</option>
@@ -53,7 +53,7 @@
                                         <p>¿No ves tu vehiculo en la lista? Envía un correo electronico a: <br> <a href="#">sociosmdv@uber.com</a></p>
                                       </div>
                                       <div class="form-group">
-                                            <p class="dark-font">Modelo</p>
+                                            <p class="font-bold">Modelo</p>
                                             <select class="form-control">
                                                 <option>Modelo1</option>
                                                 <option>Gol</option>
@@ -63,7 +63,7 @@
                                             </select>
                                         </div>
                                         <div class="form-group">
-                                            <p class="dark-font">Año</p>
+                                            <p class="font-bold">Año</p>
                                             <select class="form-control">
                                                 <option>2017</option>
                                                 <option>2016</option>
@@ -72,7 +72,7 @@
                                             </select>
                                         </div>
                                         <div class="form-group">
-                                            <p class="dark-font">Número de mátricula</p>
+                                            <p class="font-bold">Número de mátricula</p>
                                             <input type="text" class="form-control" placeholder="Número de mátricula">
                                             <p>La información de la matricula ayuda a los clientes a identificar tu vehiculo</p>
                                         </div>    
