Actualizando form Conviertete en Conductor

--- a/index.html
+++ b/index.html
@@ -25,68 +25,13 @@
                             <h2 class="font-bold">Conduce Cuando quieras</h2>
                             <p id="textoe">LabCar es una opción flexible para alcanzar tus metas financieras</p>
                             <button type="button" class="btn btn-primary font-bold" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap" id="covierteconduct">Conviertete en Coductor</button>
-                            
-                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                              <div class="modal-dialog" role="document">
-                                <div class="modal-content modalConvDrive">
-                                  <div class="modal-body">
-                                    <form>
-                                      <div class="form-group">
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                        </button>
-                                        <p class="font-bold">¿Tiene vehiculos de 4 puertas?</p>
-                                        <select class="form-control">
-                                            <option>Si</option>
-                                            <option>No</option>
-                                        </select>
-                                      </div>
-                                      <div class="form-group">
-                                        <p class="font-bold">Marca</p>
-                                        <select class="form-control">
-                                            <option>Elige la Marca del vehículo</option>
-                                            <option>Nissan</option>
-                                            <option>Toyota</option>
-                                            <option>Honda</option>
-                                            <option>Ford</option>
-                                        </select>
-                                        <p>¿No ves tu vehiculo en la lista? Envía un correo electronico a: <br> <a href="#">sociosmdv@uber.com</a></p>
-                                      </div>
-                                      <div class="form-group">
-                                            <p class="font-bold">Modelo</p>
-                                            <select class="form-control">
-                                                <option>Modelo1</option>
-                                                <option>Gol</option>
-                                                <option>Classic</option>
-                                                <option>Suran</option>
-                                                <option>Fox</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <p class="font-bold">Año</p>
-                                            <select class="form-control">
-                                                <option>2017</option>
-                                                <option>2016</option>
-                                                <option>2015</option>
-                                                <option>2014</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <p class="font-bold">Número de mátricula</p>
-                                            <input type="text" class="form-control" placeholder="Número de mátricula">
-                                            <p>La información de la matricula ayuda a los clientes a identificar tu vehiculo</p>
-                                        </div>    
-                                    </form>
-                                    <button type="button" class="btn btn-primary btnsend">ENVIAR</button>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
                         </div>
                     </div>
         </div>
     </section>
     <!-- Fin 4ta Parte -->
+    <!-- Inicio 5ta Parte -->
+    <!-- Fin 5ta Parte -->
     <!-- Inicio Footer -->
     <div class="container text-center">
         <hr />
@@ -130,6 +75,70 @@
         </div>
     </div>
     <!-- Footer -->
+
+    <!-- Inicio Modales -->
+
+    <!-- Modal Conviertete en condcutor -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content modalConvDrive">
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                      </button>
+                      <p class="font-bold">¿Tiene vehiculos de 4 puertas?</p>
+                      <select class="form-control">
+                          <option>Si</option>
+                          <option>No</option>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <p class="font-bold">Marca</p>
+                      <select class="form-control">
+                          <option>Elige la Marca del vehículo</option>
+                          <option>Nissan</option>
+                          <option>Toyota</option>
+                          <option>Honda</option>
+                          <option>Ford</option>
+                      </select>
+                      <p>¿No ves tu vehiculo en la lista? Envía un correo electronico a: <br> <a href="#">sociosmdv@uber.com</a></p>
+                    </div>
+                    <div class="form-group">
+                          <p class="font-bold">Modelo</p>
+                          <select class="form-control">
+                              <option>Modelo1</option>
+                              <option>Gol</option>
+                              <option>Classic</option>
+                              <option>Suran</option>
+                              <option>Fox</option>
+                          </select>
+                      </div>
+                      <div class="form-group">
+                          <p class="font-bold">Año</p>
+                          <select class="form-control">
+                              <option>2017</option>
+                              <option>2016</option>
+                              <option>2015</option>
+                              <option>2014</option>
+                          </select>
+                      </div>
+                      <div class="form-group">
+                          <p class="font-bold">Número de mátricula</p>
+                          <input type="text" class="form-control" placeholder="Número de mátricula">
+                          <p>La información de la matricula ayuda a los clientes a identificar tu vehiculo</p>
+                      </div>    
+                  </form>
+                  <button type="button" class="btn btn-primary btnsend">ENVIAR</button>
+                </div>
+              </div>
+            </div>
+          </div>
+    <!-- Fin Modal Convierte en conductor -->
+
+    
+    <!-- Fin Modales -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>   
 </body>
