--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <!-- Fin Link Tipografía -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -33,48 +34,99 @@
     <!-- Inicio 5ta Parte -->
     <!-- Fin 5ta Parte -->
     <!-- Inicio Footer -->
-    <div class="container text-center">
-        <hr />
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="col-md-3">
-            <ul class="nav nav-pills nav-stacked">
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Blog</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <ul class="nav nav-pills nav-stacked">
-              <li><a href="#">Product for Mac</a></li>
-              <li><a href="#">Product for Windows</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <ul class="nav nav-pills nav-stacked">
-              <li><a href="#">Web analytics</a></li>
-              <li><a href="#">Presentations</a></li>          
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <ul class="nav nav-pills nav-stacked">
-              <li><a href="#">Product Help</a></li>
-              <li><a href="#">Developer API</a></li>
-            </ul>
-          </div>  
-        </div>
-      </div>
-      <hr>
-        <div class="row">
-            <div class="col-lg-12">
-                <ul class="nav nav-pills nav-justified">
-                    <li><a href="/">© 2013 Company Name.</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                    <li><a href="#">Privacy</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- Footer -->
+    <footer>
+            <div class="container-fluid black">
+                    <div class="row">
+                      <div class="col-xs-12">
+                        <div class="margin">
+                          <img src="assets/images/logoBlanco.png" alt="">
+                          <hr>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="mobile-footer">
+                      <div class="row">
+                        <div class="col-xs-6">
+                          <ul>
+                            <li><a href="">Viaja</a></li>
+                            <li><a href="">Conduce</a></li>
+                            <li><a href="">Ciudades</a> </li>
+                            <li><a href="">Ciudades</a> </li>
+                            <li><a href="">Entrega</a> </li>
+                            <li><a href="">Como funciona?</a> </li>
+                            <li><a href="">Paises</a></li>
+                            <li><a href="">Seguridad</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-xs-6">
+                          <div class="icons">
+                             <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a> 
+                             <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a> 
+                             <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a> 
+                             <a href=""><i class="fa fa-apple" aria-hidden="true"></i></a> 
+                             <a href=""><i class="fa fa-play" aria-hidden="true"></i></a> 
+                          </div>
+                          <div class="container-app">
+                            <a href=""><img src="assets/images/enBadgeWebGeneric.png" alt=""></a> 
+                            <a href=""><img src="assets/images/appstore.png" alt=""></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="desktop-footer">
+                      <div class="row flex">
+                        <div class="col-sm-3 col-md-3 flex-end">
+                           <div class="icons">
+                               <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a> 
+                               <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a> 
+                               <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a> 
+                               <a href=""><i class="fa fa-apple" aria-hidden="true"></i></a> 
+                               <a href=""><i class="fa fa-play" aria-hidden="true"></i></a> 
+                            </div>
+                        </div>
+                        <div class="col-sm-3 col-md-3">
+                           <ul>
+                               <li><a href="">Viaja</a></li>
+                               <li><a href="">Conduce</a></li>
+                               <li><a href="">Ciudades</a> </li>
+                               <li><a href="">Ciudades</a> </li>
+                               <li><a href="">Entrega</a> </li>
+                               <li><a href="">Como funciona?</a> </li>
+                               <li><a href="">Paises</a></li>
+                               <li><a href="">Seguridad</a></li>
+                             </ul>
+                        </div>
+                        <div class="col-sm-3 col-md-3">
+                          <ul>
+                            <li><a href="">Oportunidades</a></li>
+                            <li><a href="">Nuestra historia</a></li>
+                            <li><a href="">API de Lab</a></li>
+                            <li><a href="">Evntos</a></li>
+                            <li><a href="">Desarrolladores</a></li>
+                            <li><a href="">Servicio</a></li>
+                            <li><a href="">Laboratoria</a></li>
+                            <li><a href="">Coders</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-3 col-md-3 flex-end">
+                           <div class="container-app">
+                               <a href="" class="block"><img src="assets/images/enBadgeWebGeneric.png" alt=""></a> 
+                               <a href="" class="block"><img src="assets/images/appstore.png" alt=""></a>
+                             </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12">
+                        <div>
+                          <hr>
+                          <p class="font-white font-bold">© LabCar 2017 technologies Inc</p>
+                        </div>
+                      </div>
+                    </div>
+                   </div>
+    </footer>
+    <!-- Fín Footer -->
 
     <!-- Inicio Modales -->
 
@@ -137,7 +189,7 @@
           </div>
     <!-- Fin Modal Convierte en conductor -->
 
-    
+
     <!-- Fin Modales -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>   
