--- a/index.html
+++ b/index.html
@@ -25,20 +25,59 @@
                         <div class="col-xs-12 col-md-3 col-md-offset-9 col-opacity">
                             <h2 class="font-bold">Conduce Cuando quieras</h2>
                             <p id="textoe">LabCar es una opción flexible para alcanzar tus metas financieras</p>
-                            <button type="button" class="btn btn-primary font-bold" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap" id="covierteconduct">Conviertete en Coductor</button>
+                            <button type="button" class="btn btn-primary font-bold padding10" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap" id="covierteconduct">Conviertete en Coductor</button>
                         </div>
                     </div>
         </div>
     </section>
     <!-- Fin 4ta Parte -->
     <!-- Inicio 5ta Parte -->
+    <section class="five-section">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-12 col-md-6 col-sm-4">
+            <div class="container-map">
+                <p class="font-bold font-size18">Tarifas</p>
+                <p>Consultas las tarifas LabCar aqui</p>
+                <div class="row">
+                  <div class="col-xs-2 center">
+                    <img src="assets/images/shape.png" alt="">
+                  </div>
+                  <div class="col-xs-10">
+                    <p class="paragraphs-map">Insurgentes Centro,Cuauhtémoc,Ciudad de Mexico</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-2 center">
+                      <img src="assets/images/shape2.png" alt="">
+                  </div>
+                  <div class="col-xs-10">
+                    <p class="paragraphs-map">Carolina, Ciudad de los deportes, Ciudad de Mexico</p>
+                  </div>
+                </div>
+                <div class="center">
+                    <button class="btn btn-default button-map" type="submit">TRAZAR RUTA ¡</button>
+                </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-sm-8">
+            <div class="container-map-graffy">
+              <div class="map-1" id="map"> 
+              </div>
+              <script src="js/mapadesktop.js"></script>
+              <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGIiDklpBD5Tehy-4pZgEDe0fJEUE1cb8&amp;callback=initMap"></script>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Fin 5ta Parte -->
     <!-- Inicio Footer -->
     <footer>
-            <div class="container-fluid black">
+            <div class="container-fluid">
                     <div class="row">
                       <div class="col-xs-12">
-                        <div class="margin">
+                        <div>
                           <img src="assets/images/logoBlanco.png" alt="">
                           <hr>
                         </div>
