--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
           </div>
           <div class="col-xs-12 col-md-6 col-sm-8">
             <div class="container-map-graffy">
-              <div class="map-1" id="map"> 
+              <div class="map" id="mapmobile"> 
+              </div>
+              <script src="js/mapamobile.js"></script>
+              <div class="map" id="mapdescktop"> 
               </div>
               <script src="js/mapadesktop.js"></script>
               <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGIiDklpBD5Tehy-4pZgEDe0fJEUE1cb8&amp;callback=initMap"></script>
