Actualizando Primer Boton convierte en conductor

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <button type="button" class="btn btn-default text-uppercase button-register fw-bold" data-toggle="modal" data-target="#modal-register">registrate</button>
               <hr class="line"> 
               <span class="line-work">O bien</span>
-              <button type="button" class="btn btn-primary font-bold" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap" id="covierteconduct">Conviertete en Conductor</button>
+              <button type="button" class="btn btn-primary font-bold" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap" id="covierteconduct1">Conviertete en Conductor</button>
             </form>
           </div>
         </div>
